--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -19,9 +19,9 @@ marketing:
     local_business_type: ''
     org_name: ''
     description: 'Mestre em Hitória e Internacionalista.'
-    twitter: ''
+    twitter: '@AguirreDeninson'
   analytics:
-    google_analytics: ''
+    google_analytics: 'G-JGNLP3D31W'
     baidu_tongji: ''
   verification:
     google: ''
