--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'Mestre em Hitória e Internacionalista.'
+    description: 'Mestre em História e Internacionalista.'
     twitter: '@AguirreDeninson'
   analytics:
     google_analytics: 'G-JGNLP3D31W'
