Publicacion sobre la inflacion, y cambio de colores del site.

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -48,7 +48,7 @@ footer:
       enable: false
       allow_derivatives: false
       share_alike: true
-      allow_commercial: false
+      allow_commercial: yes
 
 # Localization
 
@@ -61,7 +61,7 @@ locale:
 
 features:
   syntax_highlighter:
-    theme_light: github-light
+    theme_light: dracula
     theme_dark: dracula
   math:
     enable: false
